--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,9 @@
 
 	<script>
 		// const API = 'http://localhost:3000/get/per-chapter';
-		const API = 'http://192.168.1.17:3000/get/per-chapter';
+		// const API = 'http://192.168.1.17:3000/get/per-chapter';
+		const API = 'https://cumabaca.herokuapp.com/';
+
 		if (!localStorage.lastChap) {
 			localStorage.setItem('lastChap', 1)
 		}
