--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Download Manga From mangakomi.com/</title>
+	<title>From mangakomi.com/</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -11,7 +11,7 @@
 <body>
 	
 	<header>
-		<h1>Download Manga From mangakomi.com</h1>
+		<h1>From mangakomi.com</h1>
 	</header>
 
 	<content>
