Update url mangakomi

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
 	<content>
 			<select id="url">
-				<option value="https://mangakomi.com/manga/versatile-mage">Versatile Mage</option>
+				<option value="https://mangakomi.io/manga/versatile-mage">Versatile Mage</option>
 			</select>
 		
 			<select id="chapter"></select>
