--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 			</select> -->
 			<div>
 				<label for="url">Prefix URL:</label>
-				<input type="text" id="url" value="https://komiku.id/ch/">
+				<input type="text" id="url" value="">
 			</div>
 
 			<div>
@@ -36,6 +36,10 @@
 				<label for="max-chapter">Max chapter:</label>
 				<input type="text" id="max-chapter" value="">
 			</div>
+		</div>
+
+		<div class="submit-container">
+			<button class="submit" id="submit">Submit</button>
 		</div>
 
 		<div class="chapter-container">
@@ -85,13 +89,19 @@
 			localStorage.setItem('maxChapter', 850)
 		}
 
+		if (!localStorage.prefix) {
+			localStorage.setItem('prefix', 'https://komiku.id/ch')
+		}
+
 		var lastChap = localStorage.getItem('lastChap');
 		let title = localStorage.getItem('title')
 		let maxChapter = localStorage.getItem('maxChapter')
+		let prefix = localStorage.getItem('prefix')
 
 		$(document).ready(function () {
 			$('#title').val(title)
 			$('#max-chapter').val(maxChapter)
+			$('#url').val(prefix)
 
 			const mainElement = $('#main');
 
@@ -106,36 +116,88 @@
 				localStorage.lastChap = Number($('#chapter').val());
 			});
 
-			$('#title').on('change', function () {
-				$('#chapter').val('1')
+			$('#submit').on('click', function () {
+				let isRefresh = 0
 
-				getApi();
-
-				localStorage.title = $('#title').val();
-			});
-
-			$('#max-chapter').on('change', function () {
 				const maxChapter = Number($('#max-chapter').val())
+				let lastVal = Number(localStorage.getItem('lastChap'))
 
-				$('#chapter').html('')
+				if (maxChapter !== lastVal) {
+					if (!isNaN(maxChapter)) {
+						$('#chapter').html('')
+						let listChapter = optionChapter(1, maxChapter);
 
-				if (!isNaN(maxChapter)) {
+						$('#chapter').html(listChapter);
 
-					let listChapter = optionChapter(1, maxChapter);
+						if (maxChapter < lastVal) {
+							$('#chapter').val(maxChapter)
+							isRefresh++
+						}
+						else {
+							$('#chapter').val(lastVal)
+						}
 
-					$('#chapter').html(listChapter);
-
-					let lastVal = localStorage.getItem('lastChap')
-					if (maxChapter < Number(lastVal)) {
-						$('#chapter').val(maxChapter).change()
+						localStorage.lastChap = Number($('#chapter').val());
+						localStorage.maxChapter = maxChapter;
 					}
 					else {
-						$('#chapter').val(lastVal)
+						$('#max-chapter').val(lastVal)
 					}
+				}
 
-					localStorage.maxChapter = maxChapter;
+				const lastTitle = localStorage.getItem('title')
+				if ($('#title').val() !== lastTitle) {
+					localStorage.title = $('#title').val();
+					$('#chapter').val('1');
+
+					isRefresh++;
+				}
+
+				const lastPrefix = localStorage.getItem('prefix')
+				const url = $('#url').val()
+				if (url !== lastPrefix) {
+					localStorage.prefix = url
+
+					isRefresh++
+				}
+
+				if (isRefresh) {
+					getApi()
 				}
 			})
+
+			// $('#title').on('change', function () {
+			// 	$('#chapter').val('1')
+
+			// 	getApi();
+
+			// 	localStorage.title = $('#title').val();
+			// });
+
+			// $('#url')
+
+			// $('#max-chapter').on('change', function () {
+			// 	const maxChapter = Number($('#max-chapter').val())
+
+			// 	$('#chapter').html('')
+
+			// 	if (!isNaN(maxChapter)) {
+
+			// 		let listChapter = optionChapter(1, maxChapter);
+
+			// 		$('#chapter').html(listChapter);
+
+			// 		let lastVal = localStorage.getItem('lastChap')
+			// 		if (maxChapter < Number(lastVal)) {
+			// 			$('#chapter').val(maxChapter).change()
+			// 		}
+			// 		else {
+			// 			$('#chapter').val(lastVal)
+			// 		}
+
+			// 		localStorage.maxChapter = maxChapter;
+			// 	}
+			// })
 
 			function nextHanlde(append = false) {
 				let currentChap = Number($('#chapter').val());
