--- a/public/index.html
+++ b/public/index.html
@@ -1,363 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Cuma Baca</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cuma Baca</title>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-	<header>
-		<h1>Cuma Baca</h1>
-		<p>Tempat paling sederhana untuk membaca komik dari <a href="https://komiku.id" target="_blank">komiku</a></p>
-	</header>
-
-	<content class="input-container">
-		<input type="hidden" value="424" id="totalChapter">
-
-		<div class="info-container">
-			<!-- <select id="title">
-				<option value="versatile-mage">Versatile Mage</option>
-			</select> -->
-			<div>
-				<label for="url">Prefix URL:</label>
-				<input type="text" id="url" value="">
-			</div>
-
-			<div>
-				<label for="title">Title:</label>
-				<input type="text" id="title" value="">
-			</div>
-
-			<div>
-				<label for="max-chapter">Max chapter:</label>
-				<input type="text" id="max-chapter" value="">
-			</div>
-		</div>
-
-		<div class="submit-container">
-			<button class="submit" id="submit">Submit</button>
-		</div>
-
-		<div class="chapter-container">
-			<label for="chapter">Select chapter:</label>
-			<select id="chapter"></select>
-		</div>
-	</content>
-
-	<div class="container-button">
-		<button class="prev">Kembali</button>
-		<button class="next">Lanjut</button>
-	</div>
-
-	<div id="main">
-		<!-- <h2 class="title-komik"></h2>
-		<div class="reader-container"></div> -->
-	</div>
-
-	<div class="container-button">
-		<button class="prev">Kembali</button>
-		<button class="next">Lanjut</button>
-	</div>
-
-	<script>
-		// const API = 'http://localhost:3000/get/per-chapter';
-		// const API = 'http://192.168.1.17:3000/get/per-chapter';
-		const API = '/v2/get/per-chapter';
-
-		if (!localStorage.lastChap) {
-			localStorage.setItem('lastChap', 1)
-		}
-
-		if (!localStorage.title) {
-			console.log('run 1')
-			localStorage.setItem('title', 'versatile-mage')
-		}
-
-		if (!localStorage.maxChapter) {
-			localStorage.setItem('maxChapter', 850)
-		}
-
-		if (!localStorage.prefix) {
-			localStorage.setItem('prefix', 'https://komiku.id/ch')
-		}
-
-		var lastChap = localStorage.getItem('lastChap');
-		let title = localStorage.getItem('title')
-		let maxChapter = localStorage.getItem('maxChapter')
-		let prefix = localStorage.getItem('prefix')
-
-		const loadingElement = document.createElement('div')
-		loadingElement.setAttribute('class', 'loading-container')
-		loadingElement.innerHTML = '<p>Loading...</p>'
-
-		const errorElementBuilder = (msg = '') => {
-			const el = document.createElement('div')
-			el.setAttribute('class', 'error-container')
-			el.innerHTML = `<p>${msg}</p>`
-
-			return el
-		}
-
-		$(document).ready(function () {
-			$('#title').val(title)
-			$('#max-chapter').val(maxChapter)
-			$('#url').val(prefix)
-
-			const mainElement = $('#main');
-
-			let listChapter = optionChapter(1, maxChapter);
-
-			$('#chapter').html(listChapter);
-
-			getApi();
-			$('#chapter').on('change', function () {
-				getApi();
-
-				localStorage.lastChap = Number($('#chapter').val());
-			});
-
-			$('#submit').on('click', function () {
-				let isRefresh = 0
-
-				const maxChapter = Number($('#max-chapter').val())
-				let lastVal = Number(localStorage.getItem('lastChap'))
-
-				if (maxChapter !== lastVal) {
-					if (!isNaN(maxChapter)) {
-						$('#chapter').html('')
-						let listChapter = optionChapter(1, maxChapter);
-
-						$('#chapter').html(listChapter);
-
-						if (maxChapter < lastVal) {
-							$('#chapter').val(maxChapter)
-							isRefresh++
-						}
-						else {
-							$('#chapter').val(lastVal)
-						}
-
-						localStorage.lastChap = Number($('#chapter').val());
-						localStorage.maxChapter = maxChapter;
-					}
-					else {
-						$('#max-chapter').val(lastVal)
-					}
-				}
-
-				const lastTitle = localStorage.getItem('title')
-				if ($('#title').val() !== lastTitle) {
-					localStorage.title = $('#title').val();
-					$('#chapter').val('1');
-
-					isRefresh++;
-				}
-
-				const lastPrefix = localStorage.getItem('prefix')
-				const url = $('#url').val()
-				if (url !== lastPrefix) {
-					localStorage.prefix = url
-
-					isRefresh++
-				}
-
-				if (isRefresh) {
-					getApi()
-				}
-			})
-
-			// $('#title').on('change', function () {
-			// 	$('#chapter').val('1')
-
-			// 	getApi();
-
-			// 	localStorage.title = $('#title').val();
-			// });
-
-			// $('#url')
-
-			// $('#max-chapter').on('change', function () {
-			// 	const maxChapter = Number($('#max-chapter').val())
-
-			// 	$('#chapter').html('')
-
-			// 	if (!isNaN(maxChapter)) {
-
-			// 		let listChapter = optionChapter(1, maxChapter);
-
-			// 		$('#chapter').html(listChapter);
-
-			// 		let lastVal = localStorage.getItem('lastChap')
-			// 		if (maxChapter < Number(lastVal)) {
-			// 			$('#chapter').val(maxChapter).change()
-			// 		}
-			// 		else {
-			// 			$('#chapter').val(lastVal)
-			// 		}
-
-			// 		localStorage.maxChapter = maxChapter;
-			// 	}
-			// })
-
-			function nextHanlde(append = false) {
-				let currentChap = Number($('#chapter').val());
-
-				if (currentChap + 1 > maxChapter) {
-					if (!append) {
-						alert('sudah di chapter terakhir');
-					}
-					return
-				}
-
-				$('#chapter').val(currentChap + 1);
-
-				getApi(append);
-			}
-
-			$(".next").click(function () {
-				nextHanlde()
-			});
-
-			$(".prev").click(function () {
-				let currentChap = Number($('#chapter').val());
-
-				if (currentChap - 1 <= 0) {
-					alert('sudah di chapter pertama');
-					return
-				}
-
-				$('#chapter').val(currentChap - 1);
-
-				getApi();
-			});
-
-			function optionChapter(min, max) {
-				let data = '';
-				for (let i = max; i >= min; i--) {
-					if (lastChap == i) {
-						data += '<option selected value="' + i + '">' + i + '</option>';
-					}
-					else {
-						data += '<option value="' + i + '">' + i + '</option>';
-					}
-				}
-				return data;
-			}
-
-			let isNextRunning = false
-
-			function getApi(next = false) {
-				let url = $('#url').val();
-				let title = $('#title').val();
-				let chapter = $('#chapter').val();
-
-				if (!url || !title || !chapter) {
-					return
-				}
-
-				if (!next) {
-					mainElement.html('')
-				}
-
-				$('.error-container').remove()
-
-				// $('.loading-container').css({ display: 'flex' })
-				mainElement.append(loadingElement)
-
-				$.ajax({
-					url: API,
-					method: 'POST',
-					data: {
-						prefix: url,
-						title: title,
-						chapter: chapter
-					},
-					success: function (result) {
-						if (result.success) {
-							const data = result.data;
-
-							let listImg = ''
-							data.source.forEach((item, index) => {
-								listImg += '<img src="' + item.src + '">'
-							})
-
-							// <h2 class="title-komik"></h2>
-							// <div class="reader-container"></div>
-
-							const titleElement = document.createElement('h1')
-							titleElement.setAttribute('class', 'title-komik')
-							titleElement.textContent = data.title
-
-							const bodyKomikElement = document.createElement('div')
-							bodyKomikElement.setAttribute('class', 'reader-container')
-							bodyKomikElement.innerHTML = listImg
-
-							// $('#title-komik').html(data.title)
-							// $('.reader-container').html(listImg);
-
-							mainElement.append(titleElement, bodyKomikElement)
-
-							// addDownloadBtn();
-
-							$('.error-container').remove()
-						}
-					},
-					error: function (err) {
-						const message = err.responseJSON.error ? err.responseJSON.error : err.statusText
-
-						const errElement = errorElementBuilder(message)
-						mainElement.append(errElement)
-					},
-					complete: function () {
-						$('.loading-container').remove()
-
-						if (next) {
-							setTimeout(() => {
-								isNextRunning = false
-							}, 1000)
-						}
-					}
-				});
-			}
-
-			function handleScroll() {
-				let documentHeight = document.body.scrollHeight;
-				let currentScroll = window.scrollY + window.innerHeight;
-				// When the user is [modifier]px from the bottom, fire the event.
-				let modifier = 4000;
-				if (currentScroll + modifier > documentHeight) {
-					if (isNextRunning) {
-						return
-					}
-
-					isNextRunning = true
-
-					nextHanlde(true)
-				}
-			}
-
-			document.addEventListener('scroll', handleScroll)
-
-			/* Callback for button's "click" event */
-			// function doit() {
-			//     console.log('download');
-			// }
-
-			/* Create and add a "download" button on the top, left corner */
-			// function addDownloadBtn() {
-			//     var btn = document.createElement("button");
-			//     btn.innerText = "Download all images";
-			//     btn.addEventListener("click", doit);
-			//     btn.style.position = "fixed";
-			//     btn.style.top = btn.style.left = "0px";
-			//     document.body.appendChild(btn);
-			// }
-		});
-	</script>
 
 </body>
 </html>
