--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>Cuma Baca</h1>
+        <h3 class="subtitle">Tempat paling sederhana untuk membaca komik dari
+            <a href="https://komiku.id" target="_blank">komiku</a>
+        </h3>
+    </header>
 
+    <div>
+        <form id="komikForm">
+
+        </form>
+    </div>
+
+    <script src="main.js"></script>
 </body>
 </html>
