--- a/public/index.html
+++ b/public/index.html
@@ -6,22 +6,12 @@
     <title>Cuma Baca</title>
 
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
     <div id="root"></div>
 
-    <!-- <div class="controll-container">
-        <button class="prev" type="button">Prev</button>
-        <button class="prev" type="button">Next</button>
-    </div> -->
-
-    <!-- <div class="controll-container">
-        <button class="prev" type="button">Prev</button>
-        <button class="prev" type="button">Next</button>
-    </div> -->
-
-    <script src="main.js"></script>
-    <script src="ui.js"></script>
+    <script src="assets/main.js"></script>
+    <script src="assets/ui.js"></script>
 </body>
 </html>
