chore: add prettier configuration and format codebase
- add prettier as dev dependency with configuration files
- format all existing code files to match prettier rules
- update package.json to use consistent indentation
- add .claude/settings.json for plugin configuration
- reformat HTML, CSS, and JavaScript files with prettier
- update CLAUDE.md project documentation file

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cuma Baca</title>
+    <head>
+        <meta charset="UTF-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0"
+        />
+        <title>Cuma Baca</title>
 
-    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-    <link rel="stylesheet" href="assets/style.css">
-</head>
-<body>
-    <div id="root"></div>
+        <link
+            rel="stylesheet"
+            href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
+        />
+        <link
+            rel="stylesheet"
+            href="assets/style.css"
+        />
+    </head>
+    <body>
+        <div id="root"></div>
 
-    <script src="assets/main.js"></script>
-    <script src="assets/ui.js"></script>
-</body>
+        <script src="assets/main.js"></script>
+        <script src="assets/ui.js"></script>
+    </body>
 </html>
