--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,9 @@
         />
         <title>Cuma Baca</title>
 
-        <link
-            rel="stylesheet"
-            href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
-        />
-        <link
-            rel="stylesheet"
-            href="assets/style.css"
-        />
+        <link rel="stylesheet" href="output.css">
     </head>
-    <body>
+    <body class="overflow-x-hidden">
         <div id="root"></div>
 
         <script src="assets/main.js"></script>
