--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,16 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0"
         />
+        <meta
+            name="referrer"
+            content="no-referrer"
+        />
         <title>Cuma Baca</title>
 
-        <link rel="stylesheet" href="output.css">
+        <link
+            rel="stylesheet"
+            href="output.css"
+        />
     </head>
     <body class="overflow-x-hidden">
         <div id="root"></div>
