feat: add supported websites page and update documentation
add new websites.html page listing supported comic sources with details
update navigation to include websites link on all pages
improve project documentation with modular scraper architecture details
fix image clearing when loading new comic to prevent display issues

--- a/public/about.html
+++ b/public/about.html
@@ -36,6 +36,11 @@
                         class="text-gray-800 border-b-2 border-gray-800"
                         >Tentang Kami</a
                     >
+                    <a
+                        href="/websites.html"
+                        class="text-gray-600 hover:text-gray-800 transition-colors"
+                        >Website yang Didukung</a
+                    >
                 </nav>
             </header>
 
