feat: add sektedoujin.cc scraper support
- add sektedoujin scraper implementation with lazy-loaded image support
- update website config to replace toongod with sektedoujin
- add scraper testing utility for validating website scraping
- update documentation and websites page with new supported site

--- a/public/websites.html
+++ b/public/websites.html
@@ -78,6 +78,20 @@
                             <p class="text-sm text-gray-500">*Memerlukan headless browser karena konten di-render dengan JavaScript</p>
                         </div>
                     </div>
+
+                    <div class="bg-white border border-gray-200 rounded-lg p-6 mb-6 hover:shadow-md transition-shadow">
+                        <div class="flex items-start justify-between mb-4">
+                            <h2 class="text-2xl font-semibold">Sektedoujin</h2>
+                            <span class="bg-green-100 text-green-800 text-xs font-medium px-2.5 py-0.5 rounded">Aktif</span>
+                        </div>
+                        <div class="space-y-2 text-gray-700">
+                            <p><strong>Base URL:</strong> <a href="https://sektedoujin.cc" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">sektedoujin.cc</a></p>
+                            <p><strong>Domain:</strong> sektedoujin.cc</p>
+                            <p><strong>Bahasa:</strong> Indonesia</p>
+                            <p><strong>Metode:</strong> Browser Rendering (Puppeteer)</p>
+                            <p class="text-sm text-gray-500">*Memerlukan headless browser karena konten di-render dengan JavaScript</p>
+                        </div>
+                    </div>
                 </section>
 
                 <section class="mb-12">
