--- a/public/websites.html
+++ b/public/websites.html
@@ -79,7 +79,7 @@
                         </div>
                     </div>
 
-                    <div class="bg-white border border-gray-200 rounded-lg p-6 mb-6 hover:shadow-md transition-shadow">
+                    <div class="bg-white border border-gray-200 rounded-lg p-6 mb-6 hover:shadow-md transition-shadow" data-nsfw="true">
                         <div class="flex items-start justify-between mb-4">
                             <h2 class="text-2xl font-semibold">Sektedoujin</h2>
                             <span class="bg-green-100 text-green-800 text-xs font-medium px-2.5 py-0.5 rounded">Aktif</span>
@@ -118,5 +118,17 @@
                 </section>
             </main>
         </div>
+        <script>
+            (function() {
+                const urlParams = new URLSearchParams(window.location.search);
+                const isSecretMode = urlParams.get('mode') === 'secret';
+
+                if (!isSecretMode) {
+                    document.querySelectorAll('[data-nsfw="true"]').forEach(el => {
+                        el.style.display = 'none';
+                    });
+                }
+            })();
+        </script>
     </body>
 </html>
